# StockPiece

./: index.html  package-lock.json  package.json  readme.md
Bots/Discord/: .gitignore  bot.py  config.example.json  config.json  pyproject.toml  shared_functions.py
Bots/Discord/cogs/: exception-handler.py  general.py  owners.py
backend/: .prettierignore  eslint.config.js  package-lock.json  package.json  vercel.json
backend/.vercel/: project.json
backend/src/: app.js  constants.js  index.js  server.js
backend/src/controllers/: admin.controllers.js  coupon.controllers.js  market.controllers.js  stock.controllers.js  user.controllers.js
backend/src/db/: index.db.js
backend/src/middlewares/: auth.middlewares.js  cluster.middlewares.js  errorHandler.middlewares.js  multer.middlewares.js  requestLimit.middlewares.js
backend/src/models/: admin.models.js  chapterRelease.models.js  chapterUpdate.models.js  characterStock.models.js  coupon.models.js  errorLog.models.js  fingerPrint.models.js  purchasedStock.models.js  transaction.models.js  user.models.js  valueHistory.models.js
backend/src/utils/: cache.js  (+7 more)
backend/stocktrials/: 1.py  2.py  3.py  responseCheck.js
frontend/: ToDo.md  attributions.md  index.html  package-lock.json  package.json  postcss.config.js  tsconfig.app.json  vercel.json  vite.config.ts
frontend/favicon/: site.webmanifest
frontend/public/: _redirects  _routes.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
src/: App.css  App.tsx
src/components/: PortfolioOverview.tsx  PriceHistoryGraph.tsx  characterStockCard.tsx
(+77 files in other folders)
